fix tierlist on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.cdnfonts.com/css/edo-sz');
 
 :root {
+    /* max width for tierlist, get from image */
+    --tierlist-width: 398px;
     /* Color scheme generated on uicolors.app */
     --accent-50: #fff1f1;
     --accent-100: #ffe4e4;
@@ -451,9 +453,8 @@ textarea:focus {
 }
 .yakuza-tierlist {
     width: 100%;
-    height: 448px;
-    object-fit: none;
-    object-position: 0 0;
+    height: auto;
+    max-width: 398px;
     border-radius: 16px;
     border: 1px solid var(--border);
     box-shadow: var(--shadow-subtle);
